--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,8 +27,8 @@
             {% include './icons/file-pencil-fill.svg' %}
           </a>
           <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p> {% endcomment %}
-        {% else %}
-        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>  
+        {% comment %} {% else %}
+        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>   {% endcomment %}
         {% endif %}
         <h1><a href="/">Blog</a></h1>
       </div>
