--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,7 +14,13 @@
             <time class="date">
                 {{ post.published_date }}
             </time>
+        {% else %}
+            <a class="btn btn-secondary" href="{% url 'post_publish' pk=post.pk %}">Publish
+            </a>    
+            <a class="btn btn-secondary" href="{% url 'post_remove' pk=post.pk %}">Remove
+            </a>    
         {% endif %}
+        
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </article>
