--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -26,6 +26,9 @@
           <a href="{% url 'post_draft_list' %}" class="top-menu">
           <span class="glyphicon glyphicon-edit"></span>
           </a>
+{% comment %}           <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+          {% else %}
+          <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a> {% endcomment %}
 
         {% endif %}
         <h1><a href="/">Blog</a></h1>
